force/src/objects/Vote__c.object
<CustomObject>
    <fields>
        <fullName>KeyCalc__c</fullName>
        <formula>Voter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>キー（数式）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SumOfWeights__c</fullName>
        <description>かならず100%以下となる必要がある</description>
        <label>投票権行使率</label>
        <summarizedField>DividedVote__c.Weight__c</summarizedField>
        <summaryForeignKey>DividedVote__c.Vote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <label>一意キー</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Voter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>投票者</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>投票</relationshipLabel>
        <relationshipName>Votes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>投票</label>
    <pluralLabel>投票</pluralLabel>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>SumOfWeightCheck</fullName>
        <active>true</active>
        <errorConditionFormula>SumOfWeights__c &gt; 1.0</errorConditionFormula>
        <errorMessage>投票要素の重みはトータルで100%以下である必要があります。</errorMessage>
    </validationRules>
</CustomObject>